--- a/twin_configs/tmux.conf
+++ b/twin_configs/tmux.conf
@@ -303,6 +303,7 @@ bind -T off F12 \
   set -u window-status-current-style \;\
   set -u window-status-current-format \;\
   refresh-client -S
-
+set -sa terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
