--- a/twin_configs/tmux.conf
+++ b/twin_configs/tmux.conf
@@ -306,4 +306,5 @@ bind -T off F12 \
 set -sa terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 # Run all plugins' scripts
+bind-key 'w' choose-tree -Zs
 run '~/.tmux/plugins/tpm/tpm'
